# Plane-Detection-Point-Cloud

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  replicate.sh
app/: pdpcComputeMultiScaleFeatures.cpp  pdpcPostProcess.cpp  pdpcSegmentation.cpp  pdpcTmp.cpp
figures/: fig_05.sh  generate_fig_05.sh  generate_fig_09b.sh  generate_fig_09c.sh  generate_fig_15b.sh  preprocess_lans.sh  preprocess_stairs.sh  preprocess_triangles.sh  replicate.sh
src/: KdTree.cpp  KdTree.h  Loader.cpp  Loader.h  Log.h  Log.inl  OBJ.h  PLY.h  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h  Timer.h  Timer.inl  limited_priority_queue.h  main.cpp  static_stack.h
src/Common/: Log.h  Log.inl  Progress.cpp  Timer.cpp  Timer.h  Timer.inl  std_vector_algo.h
src/KdTree/: KdTreeNode.h
src/KdTree/Iterator/: KdTreeKNearestIndexIterator.cpp  KdTreeKNearestIndexIterator.h  KdTreeNearestIndexIterator.cpp  KdTreeNearestIndexIterator.h  KdTreeRangeIndexIterator.cpp  KdTreeRangePointIterator.cpp
src/KdTree/Query/: KdTreeKNearestIndexQuery.cpp  KdTreeKNearestIndexQuery.h  KdTreeKNearestPointQuery.cpp  KdTreeKNearestPointQuery.h  KdTreeNearestIndexQuery.cpp  KdTreeNearestIndexQuery.h  KdTreeNearestPointQuery.h  KdTreeRangeIndexQuery.cpp
src/KnnGraph/Iterator/: KnnGraphRangeIterator.h
src/KnnGraph/Query/: KnnGraphQuery.cpp  KnnGraphRangeQuery.cpp  KnnGraphRangeQuery.h
src/PDPC/Common/: Assert.h  Colors.h  DebugTrap.h  Defines.h  File.cpp  File.h  IO.h  Log.h  Log.inl  Macro.h  Option.cpp  Option.h  Option.hpp  Progress.cpp  Progress.h  String.cpp  String.h  Timer.cpp  Timer.h  Timer.inl  std_vector_algo.h
src/PDPC/Graph/: Edge.h  Graph.cpp  Graph.h  HierarchicalGraph.cpp  HierarchicalGraph.h  Node.h
src/PDPC/MultiScaleFeatures/: MultiScaleFeatures.cpp  MultiScaleFeatures.h  MultiScaleFeatures.inl
src/PDPC/Persistence/: Component.cpp  Component.h  ComponentDataSet.cpp  ComponentDataSet.h  ComponentSet.cpp  ComponentSet.h
src/PDPC/PointCloud/: Loader.cpp  OBJ.cpp  PLY.cpp  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h  orthonormal_basis.h  triangle_area.h
src/PDPC/RIMLS/: RIMLSOperator.cpp  RIMLSOperator.h  RIMLSWeightFunc.h  RIMLSWeightFunc.hpp
src/PDPC/ScaleSpace/: ScaleSampling.cpp  ScaleSampling.h  ScaleSampling.inl  ScaleSpaceStack.h
src/PDPC/Segmentation/: MSSegmentation.cpp  MSSegmentation.h  MSSegmentationGraph.cpp  MSSegmentationGraph.h  RegionSet.cpp  RegionSet.h  SeededKNNGraphRegionGrowing.h  SeededKNNGraphRegionGrowing.hpp  Segmentation.cpp  Segmentation.h  Segmentation.inl  SegmentationIterators.cpp  SegmentationIterators.h
src/PDPC/SpacePartitioning/: KdTree.cpp  KdTree.h  KnnGraph.cpp  KnnGraph.h
src/PointCloud/: Loader.cpp  OBJ.cpp  PLY.cpp  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h
src/PointCloud/internal/: plyio.h
src/Ponca/: core.h
src/Ponca/Core/: algebraicEllipsoid.h  algebraicEllipsoid.hpp  algebraicSphere.h  algebraicSphere.hpp  basket.h  covariancePlaneFit.h  covariancePlaneFit.hpp  curvature.h  (+26 more)
src/Query/: IndexQuery.cpp  KNearestIndexQuery.cpp  KNearestIndexQuery.h  KNearestPointQuery.cpp  KNearestPointQuery.h  KNearestQuery.cpp  KNearestQuery.h  NearestIndexQuery.cpp  NearestIndexQuery.h  NearestPointQuery.cpp  NearestPointQuery.h  NearestQuery.h  PointQuery.cpp  PointQuery.h  RangeIndexQuery.cpp  RangeIndexQuery.h  RangePointQuery.cpp  RangePointQuery.h  RangeQuery.cpp  RangeQuery.h
src/RIMLS/: RIMLSOperator.cpp  RIMLSOperator.h  RIMLSPoint.h  RIMLSWeightFunc.h  RIMLSWeightFunc.hpp
src/SpacePartitioning/: KdTree.cpp  KdTree.h  KnnGraph.cpp  KnnGraph.h
src/internal/: IndexSquaredDistance.cpp  plyio.cpp
(+118 files in other folders)
